--- a/index.css
+++ b/index.css
@@ -2,18 +2,16 @@ body{
 	margin: 0;
 }
 
-div{
-
-}
-
 h1{
-	text-align: center;
-	color: blue;
+	font-family: "Open Sans";
+	margin: 5px;
+	padding: 15px;
+	color: #C4D037;
 }
 
 h2{
 	padding-top: 30px;
-
+	font-family: Roboto;
 }
 
 ol{
@@ -40,33 +38,34 @@ table img{
 	height: 160px;
 }
 
-form{
-	text-align: center;
-}
-
 #sidebar {
 	list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 35%;
+	margin: 0;
+	padding: 20px;
+	width: 35%;
 	background-color: #FFFFFF;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
+	position: fixed;
+	height: 100%;
+	overflow: auto;
+	text-align: left;
+	border-right: 2px solid silver;
 }
 
 #instruction h2{
 	margin-left: 20px;
-	font-family: verdana;
+	font-family: Roboto;
 }
 
 #instruction p{
 	margin-left: 35px;
 	font-size: 19px;
 }
-
+#content h1{
+	text-align: center;
+	font-family: "Open Sans";
+}
 #content {
-	margin-left:35%;
+	margin-left:40%;
 	padding:1px;
 	height:1000px;
 }
