--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ h1{
 h2{
 	padding-top: 30px;
 	font-family: Roboto;
+	font-size: 18pt;
 	color: #C4D037;
 }
 
@@ -28,10 +29,6 @@ th{
 	font-size: 20px;
 }
 
-table img{
-	width: 300px;
-	height: 160px;
-}
 p{
 	font-family: "Roboto";
 }
@@ -40,7 +37,7 @@ p{
 	list-style-type: none;
 	margin: 0;
 	padding: 20px;
-	width: 35%;
+	width: 30%;
 	background-color: #FFFFFF;
 	position: fixed;
 	height: 100%;
@@ -61,6 +58,80 @@ p{
 	margin-left: 35px;
 }
 
+#show {
+  display: inline-block;
+  color:#C4D037;
+  text-align: left;
+  border: none;
+  /*padding: 10px;*/
+  width: 50%;
+  transition: all 0.5s;
+  font:bold 18pt Roboto, "Times New Roman";
+}
+
+#show span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#show span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+#show:hover span {
+  padding-right: 25px;
+}
+
+#show:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+#bkd {
+  display: inline-block;
+  border:none;
+  color:#C4D037;
+  text-align: left;
+  /*padding: 10px;*/
+  width: 50%;
+  transition: all 0.5s;
+  font:bold 18pt Roboto, "Times New Roman";
+}
+
+#bkd span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#bkd span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+#bkd:hover span {
+  padding-right: 25px;
+}
+
+#bkd:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
+
 #content h1{
 	text-align: left;
 	color: white;
@@ -74,7 +145,7 @@ p{
 }
 
 #content {
-	margin-left:40%;
+	margin-left:35%;
 	padding:1px;
 	height:1000px;
 }
@@ -86,18 +157,9 @@ p{
 	border-radius: 5px;
 }
 
-.instructpicdiv img{
-	width:600px;
-	height: 600px;
-	padding: 0px;
-	border: 0px;
-	}
-
-
-.ipic{
-	width: 400px;
-	height: 400px;
-	/*height: 50%;*/
+#example img{
+	width:90%;
+	float: left;
 }
 
 .label{
@@ -120,18 +182,54 @@ table{
 
 }
 
-#capImg {
-	margin-left: 50%;
+#capImg img{
+	margin-left:37%;
 	position: fixed;
-	width: 500px;
+	width: 20%;
 	height: auto;
 }
-#captext1{
 
+#captext1{
+margin:0;
+padding:0;
 }
+
 #captext3{
 font-family: "Roboto";
 }
+
+.ud {
+  background-color: white; 
+  color: #4F4B4D; 
+  border: 2px solid #FDC14C;
+  border-radius: 5px;
+  padding:10px;
+  width: 15%;
+  margin:10px;
+  font: 12pt arial;
+}
+
+.ud:hover {
+  background-color: #FDC14C;
+  color: white;
+}
+
+.ca {
+  background-color: white; 
+  color: #4F4B4D;
+  border: 2px solid #E86D8C;
+  border-radius: 5px;
+  padding:10px;
+  width: 10%;
+  margin:10px;
+  font: 12pt arial;
+}
+
+.ca:hover {
+  background-color: #E86D8C;
+  color: white;
+}
+
 #comment{
 	text-align: center;
 }
@@ -153,7 +251,32 @@ font-family: "Roboto";
 
 }
 
+#reason{
+	font:bold 15pt "Roboto";
+	padding:15px;
+}
+
 textarea{
-	width: 400px;
+	width: 45%;
 	height: 100px;
+	border-radius:5px;
+	border:1px solid silver;
+	font-size: 14pt;
+	font-family: "Bradley Hand";
+}
+
+input[type=submit]{
+	padding: 20px 40px;
+	background:#C4D037;
+	border:0 none;
+	cursor:pointer;
+	-webkit-border-radius:10px;
+	border-radius:5px;
+	font:bold 18pt arial;
+	color: white;
+	margin-left: 16%;
+	margin-top: 20px;
+}
+input:hover {
+  background-color: #A3AD2D;
 }
