--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body{
 	margin: 0;
 }
 
-h1{
+#content h1{
 	font-family: 'Oleo Script', cursive;
 	text-align: left;
 	color: white;
@@ -11,8 +11,9 @@ h1{
 	size: 20px;
 	height: 60px;
 	line-height: 60px;
-	padding-left: 20px;
+	padding: 15px;
 	margin-top: 10px;
+	width: 70%;
 }
 
 h2{
@@ -28,6 +29,10 @@ h3{
 	font-family: 'Roboto', sans-serif;
 }
 
+h4{
+	padding-left: 12px;
+	font-family: 'Roboto', sans-serif;
+}
 
 a{
 	font-size: 25px;
@@ -40,6 +45,11 @@ th{
 
 p{
 	font-family: 'Roboto', sans-serif;
+}
+
+ul{
+	font-family: 'Roboto', sans-serif;
+	padding-left: 20px;
 }
 
 #sidebar {
@@ -58,6 +68,11 @@ p{
 #sidebar ol{
 	color: #1E2621;
 }
+
+#sidebar p{
+	color: #2c2c2c;
+}
+
 
 #instruction ul{
 	color: =#1E2621;
@@ -114,7 +129,7 @@ p{
   width: 50%;
   transition: all 0.5s;
   font:bold 18pt Roboto, "Times New Roman";
-  margin-bottom: 20px;
+  margin-bottom: 20%;
   margin-top: 10px;
 }
 
@@ -145,7 +160,7 @@ p{
 
 #moreinfo {
 	padding: 10px;
-	margin-bottom: 30px;
+	margin-bottom: 20%;
 }
 
 #content {
@@ -158,6 +173,19 @@ p{
 	margin-left:35%;
 	padding:1px;
 	height:1000px;
+}
+
+#prototype h1{
+	font-family: 'Oleo Script', cursive;
+	text-align: left;
+	color: white;
+	background-color: #FDC14C;
+	border-radius: 10px;
+	size: 20px;
+	height: 60px;
+	line-height: 60px;
+	padding: 15px;
+	margin-top: 10px;	
 }
 
 
@@ -174,15 +202,32 @@ p{
 }
 
 #example img{
-	width:90%;
+	width:500px;
 	float: left;
 }
 
-#capImg img{
-	margin-left:42%;
+
+#capImg {
+	margin-left:38%;
 	position: fixed;
+	border: none;
 	width: 20%;
-	height: auto;
+}
+
+#capImg img{
+	width: 100%;
+}
+
+#rotateImg {
+  background-color: RoyalBlue; 
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding:12px 16px;
+  font: 12pt;
+  font-size: 16px;
+  margin-left:60%;
+  position:fixed;
 }
 
 #egImg img{
@@ -201,37 +246,35 @@ font-family: "Roboto";
 
 
 .ud {
-  background-color: white; 
-  color: #4F4B4D; 
-  border: 2px solid #FDC14C;
+  background-color: #FDC14C; 
+  color: white;
+  border: none;
   border-radius: 5px;
-  padding:10px;
-  width: 15%;
+  padding:12px 16px;
+  width: 20%;
   margin:10px;
   font: 12pt arial;
+  font-size: 16px;
 }
 
 .ud:hover {
-  background-color: #FDC14C;
-  color: white;
+  background-color: #A17B30;
   cursor: pointer;
 }
 
 .ca {
-  background-color: white; 
-  color: #4F4B4D;
-  border: 2px solid #E86D8C;
+  background-color: #E86D8C; 
+  color: white;
   border-radius: 5px;
-  padding:10px;
-  width: 10%;
+  padding:12px 16px;
+  width: 18%;
   margin:10px;
   font: 12pt arial;
 }
 
 .ca:hover {
-  background-color: #E86D8C;
+  background-color: #c75a75;
   cursor: pointer;
-  color: white;
 }
 
 
@@ -275,7 +318,7 @@ input:hover {
 
 #test{
 	padding: 20px 40px;
-	background:#C4D037;
+	background:#FDC14C;
 	border:0 none;
 	cursor:pointer;
 	-webkit-border-radius:10px;
@@ -287,7 +330,7 @@ input:hover {
 	margin-bottom: 30px;
 }
 #test:hover {
-  background-color: #A3AD2D;
+  background-color: #A17B30;
 }
 #comment{
 	text-align: center;
